--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -11,7 +11,7 @@
 
     <project-components>
         <component>
-            <implementation-class>com.github.tmurakami.kcps.idea.IdeaProjectComponent</implementation-class>
+            <implementation-class>com.github.tmurakami.kcps.idea.ProjectComponentImpl</implementation-class>
         </component>
     </project-components>
 </idea-plugin>
